<resources>
  <string name="create_account_wpcom">Create an account on WordPress.com</string>
  <string name="create_blog_wpcom">Create your first WordPress.com site</string>
  <string name="review_your_information">Review your information</string>
  <string name="validating_user_data">Validating User Data</string>
  <string name="validating_site_data">Validating Site Data</string>
  <string name="action_previous">Previous</string>
  <string name="action_next">Next</string>
  <string name="action_finish">Finish</string>
  <string name="title_template_step">Step %s</string>
  <string name="required_fields">Required Fields</string>
  <string name="required_field">Required Field</string>
  <string name="username_password_required">Username and Password are required fields.</string>
  <string name="invalid_email_title">Invalid email</string>
  <string name="invalid_email_message">Your email address is not valid.</string>
  <string name="invalid_password_title">Invalid password</string>
  <string name="invalid_password_message">Password must contain at least 4 characters.</string>
  <string name="passwords_do_not_match_message">Passwords don\'t match.</string>
  <string name="invalid_username_title">Invalid username</string>
  <string name="invalid_username_length">Username must be shorter than 61 characters.</string>
  <string name="email_hint">Email Address</string>
  <string name="password_hint">Password</string>
  <string name="confirm_password_hint">Confirm password</string>
  <string name="blog_address_required">Blog address is required.</string>
  <string name="signup_label">Sign Up</string>
  <string name="signin_label">Sign In</string>
  <string name="signing_up">Signing up...</string>
  <string name="signing_in">Signing in...</string>
  <string name="dont_yet_have_an_account">Do not have an account yet?</string>
  <string name="already_have_an_account">Already have an account? Sign in</string>
  <string name="agree_terms_of_service">You agree to the fascinating <u>Term of Service.</u> by pressing the next button.</string>
  <string name="username_only_lowercase_letters_and_numbers">Sorry, usernames can only contain lowercase letters (a-z) and numbers.</string>
  <string name="username_required">Please enter a username.</string>
  <string name="username_not_allowed">That username is not allowed.</string>
  <string name="email_cant_be_used_to_signup">You cannot use that email address to signup. We are having problems with them blocking some of our email. Please use another email provider.</string>
  <string name="username_must_be_at_least_four_characters">Username must be at least 4 characters.</string>
  <string name="username_contains_invalid_characters">Sorry, usernames may not contain the character &#8220;_&#8221;!</string>
  <string name="username_must_include_letters">Sorry, usernames must have letters (a-z) too!</string>
  <string name="email_invalid">Please enter a valid email address.</string>
  <string name="email_not_allowed">Sorry, that email address is not allowed!</string>
  <string name="username_exists">Sorry, that username already exists!</string>
  <string name="email_exists">Sorry, that email address is already being used!</string>
  <string name="username_reserved_but_may_be_available">That username is currently reserved but may be available in a couple of days.</string>
  <string name="email_reserved">That email address has already been used. Please check your inbox for an activation email. If you don\'t activate you can try again in a few days.</string>
  <string name="blog_name_required">Please enter a site address.</string>
  <string name="blog_name_not_allowed">That site address is not allowed.</string>
  <string name="blog_name_must_be_at_least_four_characters">Site address must be at least 4 characters.</string>
  <string name="blog_name_must_be_less_than_sixty_four_characters">The site address must be shorter than 64 characters.</string>
  <string name="blog_name_contains_invalid_characters">Sorry, site addresses may not contain the character &#8220;_&#8221;!</string>
  <string name="blog_name_cant_be_used">Sorry, you may not use that site address.</string>
  <string name="blog_name_only_lowercase_letters_and_numbers">Sorry, site addresses can only contain lowercase letters (a-z) and numbers.</string>
  <string name="blog_name_must_include_letters">Sorry, site addresses must have letters too!</string>
  <string name="blog_name_exists">Sorry, that site already exists!</string>
  <string name="blog_name_reserved">Sorry, that site is reserved!</string>
  <string name="blog_name_reserved_but_may_be_available">hat site is currently reserved but may be available in a couple days.</string>
  <string name="password_invalid">Your password is invalid because it does not meet our security guidelines. Please try a more complex password.</string>
  <string name="blog_name_invalid">Invalid Site Address</string>
  <string name="blog_title_invalid">Invalid Site Title</string>
  <string name="username_invalid">Invalid username</string>
  <string name="unknown_error">Unknown error</string>
  <string name="limit_reached">Limit reached. You can try again in 1 minute. Trying again before that will only increase the time you have to wait before the ban is lifted. If you think this is in error, contact support.</string>
  <string-array name="privacy_array">
       <item>Public</item>
       <item>Hidden</item>
       <item>Private</item>
  </string-array>
  <string name="url_username_password_required">Please fill in all of the fields before submitting.</string>
  <string name="xmlrpc_error">Could not connect. Please enter the full path to xmlrpc.php on your site and try again.</string>
  <string name="no_blogs_found">No Blogs Found</string>
  <string name="no_blogs_message">No %s blogs were found for that account.</string>
  <string name="additional">additional</string>
  <string name="add_all">Add All</string>
  <string name="add_selected">Add Selected</string>
  <string name="select_blogs">Select Blogs</string>
  <string name="enable_blogs">Enable blogs</string>
  <string name="no_network_title">No network available</string>
  <string name="no_network_message">There is no network available. Please connect to a network and try again.</string>
  <string name="sure_sign_out">Are you sure you want to sign out from WordPress.com?</string>
  <string name="sign_out_confirm">Are you sure you want to sign out?</string>
  <string name="please_sign_in">Please sign in again.</string>
  <string name="select_categories">Select Categories</string>
  <string name="tags_and_categories">Tags &amp; Categories</string>
  <string name="tags_separate_with_commas">Tags (separate tags with commas)</string>
  <string name="post_content">Content (tap to add text and media)</string>
  <string name="dont_yet_have_a_blog">Don\'t yet have a blog?</string>
  <string name="max_thumbnail_px_width">Default image width</string>
  <string name="password">Password</string>
  <string name="get_free_blog">Get a free blog at WordPress.com</string>
  <string name="tagline">Start blogging in seconds.</string>
  <string name="i_have_wp_blog">Add blog hosted at WordPress.com</string>
  <string name="i_have_blog">Add self-hosted WordPress blog</string>
  <string name="new_to_wp">Start a new blog at WordPress.com</string>
  <string name="blogs">Blogs</string>
  <string name="account_details">Account Details</string>
  <string name="status">Status</string>
  <string name="comment_content">Comment Content</string>
  <string name="anonymous">Anonymous</string>
  <string name="post">Post</string>
  <string name="page">Page</string>
  <string name="posts">Posts</string>
  <string name="pages">Pages</string>
  <string name="about">About</string>
  <string name="username">Username</string>
  <string name="cancel">Cancel</string>
  <string name="save">Save</string>
  <string name="add">Add</string>
  <string name="selected_categories">Selected categories:</string>
  <string name="publish">Publish? </string>
  <string name="add_account">Add Blog</string>
  <string name="notification_sound">Play notification sound</string>
  <string name="notification_vibrate">Vibrate</string>
  <string name="notification_blink">Blink notification light</string>
  <string name="sure_to_remove_account">Are you sure you want to remove this blog?</string>
  <string name="yes">Yes</string>
  <string name="no">No</string>
  <string name="error">Error</string>
  <string name="could_not_remove_account">Could not remove blog.</string>
  <string name="edit_page">Edit Page</string>
  <string name="edit_post">Edit Post</string>
  <string name="add_comment">Add Comment</string>
  <string name="refreshing_categories">Refreshing Categories</string>
  <string name="attempting_categories_refresh">Attempting to refresh categories</string>
  <string name="connection_error">Connection Error</string>
  <string name="connection_error_occured">A connection error has occurred. Please try again later.</string>
  <string name="categories_refreshed">Categories refreshed</string>
  <string name="category_refresh_error">Category refresh error</string>
  <string name="incorrect_credentials">Incorrect username or password.</string>
  <string name="empty_fields">No Content Found</string>
  <string name="title_post_required">Please enter some post content or attach a media item.</string>
  <string name="cancel_edit">Cancel Edit</string>
  <string name="sure_to_cancel_edit">Are you sure you want to cancel editing this post?</string>
  <string name="new_account">New Account</string>
  <string name="upload_full_size_image">Upload and link to full image</string>
  <string name="upload_scaled_image">Upload and link to scaled image</string>
  <string name="scaled_image_error">Please enter a valid scaled width value</string>
  <string name="scaled_image">Scaled image width</string>
  <string name="load_more">Load More</string>
  <string name="load_settings">Load settings now?</string>
  <string name="immediately">Immediately</string>
  <string name="uploading">Uploading</string>
  <string name="uploading_media_item">Uploading media item #</string>
  <string name="gallery_error">Sorry, the media item could not be retrieved from the Gallery.</string>
  <string name="refresh">Refresh</string>
  <string name="home">Home</string>
  <string name="more_tag">More</string>
  <string name="blog_not_found">Sorry, an error occurred when attempting to access this blog.</string>
  <string name="post_not_found">Sorry, an error occurred when attempting to load the post. Please refresh your posts and try again.</string>
  <string name="wpcom">WordPress.com</string>
  <string name="sign_in">Sign in</string>
  <string name="sign_out">Sign out</string>
  <string name="tab_comments">Comments</string>
  <string name="tab_posts">Posts</string>
  <string name="tab_pages">Pages</string>
  <string name="tab_stats">Stats</string>
  <string name="link_enter_url">URL</string>
  <string name="link_enter_url_text">Link Text (optional)</string>
  <string name="create_a_link">Create a Link</string>
  <string name="title">Title</string>
  <string name="content">Tap to add text and media</string>
  <string name="sure_to_cancel_edit_page">Are you sure you want to cancel editing this page?</string>
  <string name="untitled">Untitled</string>
  <string name="local_draft">Local Draft</string>
  <string name="local_drafts">Local Drafts</string>
  <string name="post_id">Post</string>
  <string name="upload_failed">Upload Failed</string>
  <string name="post_password">Password (optional)</string>
  <string name="caption">Caption (optional)</string>
  <string name="horizontal_alignment">Horizontal Alignment</string>
  <string name="width">Width</string>
  <string name="featured">Use as featured image</string>
  <string name="featured_in_post">Include image in post content</string>
  <string name="out_of_memory">Device out of memory.</string>
  <string name="add_account_blog_url">Blog URL</string>
</resources>