<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFFFFF" >
    
    <RelativeLayout
        android:layout_width="-1dp"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center_horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp" >

	     <TextView android:id="@+id/text1"
	            style="?android:textAppearanceLarge"
	            android:textStyle="bold"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginBottom="16dp" />
        
        <ImageView
            android:id="@+id/wordpress_logo"
            android:layout_width="fill_parent"
            android:layout_height="200dp"
            android:scaleType="centerInside"
            android:layout_below="@id/text1"
            android:src="@drawable/new_account_logo" >
        </ImageView>

	    <TextView android:id="@+id/create_account_label"
           style="?android:textAppearanceMedium"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_centerHorizontal="true"
           android:textStyle="normal"
           android:text="@string/create_account_wpcom"
           android:layout_below="@id/wordpress_logo"
           android:layout_marginTop="10dp" 
           android:layout_marginBottom="10dp" />
        
        <EditText
            android:id="@+id/email_address"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/create_account_label"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/username"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/email_address"
            android:hint="@string/username"
            android:inputType="textNoSuggestions" />

        <EditText
            android:id="@+id/password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/username"
            android:hint="@string/password_hint"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/l_agree_terms_of_service"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/password"
            android:layout_centerHorizontal="true"
            android:shadowColor="#FFFFFF"
            android:shadowDx="0"
            android:shadowDy="1"
            android:shadowRadius="1"
            android:text="@string/agree_terms_of_service"
            android:textColor="#444444"
            android:textSize="12sp"/>

        <Button
            android:id="@+id/signup_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/l_agree_terms_of_service"
            android:layout_marginTop="20dp"
            android:text="@string/action_next" />
    </RelativeLayout>

</ScrollView>