<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFFFFF" >
    
    <RelativeLayout
        android:layout_width="-1dp"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center_horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp" >

     <TextView android:id="@+id/text1"
          style="?android:textAppearanceLarge"
          android:textStyle="bold"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginBottom="16dp" />
	     
	<ImageView
	     android:id="@+id/wordpress_logo_review"
	     android:layout_width="fill_parent"
	     android:layout_height="200dp"
	     android:scaleType="centerInside"
	     android:layout_below="@id/text1"
	     android:src="@drawable/new_account_logo" >
	 </ImageView>     
     
     <TextView android:id="@+id/review_account_label"
         style="?android:textAppearanceMedium"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:textStyle="normal"
         android:text="@string/create_account_wpcom"
         android:layout_below="@id/wordpress_logo_review"
         android:layout_marginTop="10dp" 
         android:layout_marginBottom="10dp" />
	
    <TextView android:id="@+id/email_text"
         style="?android:textAppearance"
         android:textStyle="normal"
         android:layout_below="@id/review_account_label"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp" />
    
    <TextView android:id="@+id/username_text"
         style="?android:textAppearance"
         android:textStyle="normal"
         android:layout_below="@id/email_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp" />
        
    <TextView android:id="@+id/title_text"
         style="?android:textAppearance"
         android:textStyle="normal"
         android:layout_below="@id/username_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp" />

    <TextView android:id="@+id/address_text"
         style="?android:textAppearance"
         android:textStyle="normal"
         android:layout_below="@id/title_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp" />
    
    <TextView android:id="@+id/language_text"
         style="?android:textAppearance"
         android:textStyle="normal"
         android:layout_below="@id/address_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp" />
          
     <LinearLayout
         android:layout_below="@id/language_text"
         android:orientation="horizontal"
         android:layout_height="wrap_content"
         android:layout_width="match_parent">
         
         <Button
          android:id="@+id/prev_button"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="20dp"
          android:text="@string/action_previous" />
                 
      	<Button
          android:id="@+id/next_button"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="20dp"
          android:text="@string/action_next" />
      	
     </LinearLayout>

    </RelativeLayout>

</ScrollView>